--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
       <artifactId>tablesaw-core</artifactId>
       <version>0.38.1</version>
     </dependency>
+    <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.7.30</version>
+	</dependency>
   </dependencies>
 </project>
